ZPL Programming Guide (PDF) and new sample

--- a/ZPL_Mate/ZPL_Mate.vbproj
+++ b/ZPL_Mate/ZPL_Mate.vbproj
@@ -115,6 +115,9 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+    <None Include="ZPL Programming Guide.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Labels.xml">
